--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^10.2.0",
     "@react-native-firebase/storage": "^10.2.0",
     "expo": "~40.0.0",
@@ -18,7 +19,13 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
