--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~40.0.0",
     "expo-document-picker": "~8.4.1",
     "expo-image-picker": "~9.2.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.0",
     "react": "16.13.1",
